--- a/clinicManagementSystem/composer.json
+++ b/clinicManagementSystem/composer.json
@@ -6,10 +6,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "box/spout": "^3.3",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "phpoffice/phpword": "^1.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
